--- a/app/css/adaptiv.css
+++ b/app/css/adaptiv.css
@@ -52,7 +52,6 @@ table {
 
 html, body {
 	height: 100%;
-	min-width: 1220px;
 }
 
 body{
@@ -78,7 +77,7 @@ header{
 	position: relative;
 }
 .header_container{
-	width: 1204px;	
+	max-width: 64%;	
 	margin: 0 auto;
 }
 .header{
@@ -178,12 +177,12 @@ header{
     background-position: -182px -151px;
 }
 .content{
-	width: 960px;
+	width: 50%;
 	margin: 0 auto;
 }
 .sidebar {
 	float: left;
-	width: 250px;
+	width: 26%;
 }
 .nav{
 	margin-bottom: 35px;
@@ -194,7 +193,7 @@ header{
 	font-family: "OpenSansSemiBold";
 	text-decoration: none;
 	padding: 16px 27px 17px 27px;
-	font-size: 20px;
+	font-size: 140%;
 	color: rgb(114, 112, 112);
 	line-height: 1.1;
 	text-align: left;
@@ -275,7 +274,7 @@ header{
 			box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.17),inset 0 1px 0 0 rgba(255, 255, 255, 0.25);
 	color: rgb(208, 152, 44);
 	font-family: "OpenSansSemiBold";
-	font-size: 20px;
+	font-size: 140%;
 	padding: 10px 26px 12px 26px;
 	text-align: left;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
@@ -300,7 +299,7 @@ header{
 	text-decoration: none;
 	padding: 12px 14px 10px 97px;
 	overflow: hidden;
-	font-size: 13px;
+	font-size: 85%;
 	color: #888787;
 	line-height: 1.1;
 	text-align: left;
@@ -362,7 +361,7 @@ header{
 
 .content_area{
 	float: right;
-	width: 651px;
+	width: 69%;
 }
 .information{
 	display: block;
@@ -381,7 +380,7 @@ header{
 	   		border-radius:  5px;
 }
 .mainLine{
-	font-size: 24px;
+	font-size: 160%;
 	font-family: "OpenSansSemiBold";
 	color: #eeedec;
 	text-align: left;
@@ -435,7 +434,7 @@ header{
 }
 .info{
 	margin-top: -9px;
-	width: 377px;
+	width: 67%;
 	line-height: 1.77;
 	display: inline-block;
 	vertical-align: top;
@@ -454,7 +453,7 @@ header{
 .skills{
 	margin-top: 9px;
 	display: inline-block;
-	width: 240px;
+	width: 63%;
 	margin-left: -5px;
 }
 .skill{
@@ -465,7 +464,7 @@ header{
 	line-height: 2.8;
 	background: url(../images/skill2.png) repeat-x;
 	text-transform: uppercase;
-	font-size: 9px;
+	font-size: 65%;
 	font-family: "OpenSansBold";
 	color: #1e7465;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.45);
@@ -609,13 +608,10 @@ header{
 	position: relative;
 }
 .footer_container{
-	width: 960px;
+	width: 50%;
 	margin: 20px auto;
 	font-size: 12px;
 	line-height: 1.9;		
-}
-.footer_container a{
-	text-decoration: none;		
 }
 .footer_text{
 	display: inline-block;
@@ -625,7 +621,6 @@ header{
 }
 
 .enter {
-	text-decoration: none;
     margin-left: 167px;
 	display: inline-block;
     width: 24px;
