--- a/app/css/style.css
+++ b/app/css/style.css
@@ -282,6 +282,8 @@ header{
 }
 .contacts li{
 	position: relative;
+	overflow: hidden;
+	height: 37px;
 }
 
 .contacts a:after{
@@ -290,19 +292,21 @@ header{
 	position: absolute;
 	top: 0;
     width: 10px;
-    height: 38px;
+    height: 37px;
     background-position: -50px -5px;
+
 }
 
 .contacts a{
 	position: relative;
 	display: block;
 	text-decoration: none;
-	padding: 12px 14px 10px 97px;
+	padding: 6px 14px 8px 97px;
 	overflow: hidden;
+	text-overflow:ellipsis;
 	font-size: 13px;
 	color: #888787;
-	line-height: 1.1;
+	line-height: 2;
 	text-align: left;
 	background: -moz-linear-gradient(top, #ffffff 0%, #f4f3f2 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(top, #ffffff 0%,#f4f3f2 100%); /* Chrome10-25,Safari5.1-6 */
@@ -313,7 +317,7 @@ header{
 			box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.35), inset 0 2px 2px 0 rgba(114, 112, 112, 0.1);
  	border: 1px solid #d6d5d3;
  	border-top: none;
- 	cursor: pointer;
+ 	cursor: pointer;	
 }
 .gmail_cont:before{
 	content: '';
@@ -594,7 +598,7 @@ header{
 
 
 .empty{
-	height: 62px;
+	height: 63px;
 }
 .footer{
 	background: -moz-linear-gradient(top, #ffffff 0%, #f1f1f1 100%); /* FF3.6-15 */
@@ -604,7 +608,7 @@ header{
 	-webkit-box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.1);
 	   -moz-box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.1);
 			box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.1);
-	height: 62px;
+	height: 63px;
 	margin-top: -62px;
 	position: relative;
 }
@@ -625,6 +629,7 @@ header{
 }
 
 .enter {
+
 	text-decoration: none;
     margin-left: 167px;
 	display: inline-block;
@@ -640,11 +645,11 @@ header{
     background-position: -182px -119px;
 }
 .enter_text{
+	display: inline-block;
 	margin-left: 29px;
-    text-decoration: none;
     text-transform: uppercase;
 	cursor: pointer;
-	font-family: "OpenSansBold";
+	font-family: "OpenSansBold", "OpenSansSemiBold", Arial;	
 	color: #9c9c9c;
 	text-align: left;
 	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.85);
