--- a/app/css/feedback.css
+++ b/app/css/feedback.css
@@ -45,21 +45,21 @@
 .no-cssgradients .contact_form input{
 	padding: 12px 8px 5px 8px;
 }
-*::-webkit-input-placeholder{
+.contact_form::-webkit-input-placeholder{
 	font-size: 12px;
 	font-family: "OpenSansLight";
 	color: rgb(199, 198, 198);
 	line-height: 1.2;
 	text-align: left;
 }
-*:-moz-placeholder{
+.contact_form:-moz-placeholder{
 	font-size: 12px;
 	font-family: "OpenSansLight";
 	color: rgb(199, 198, 198);
 	line-height: 1.2;
 	text-align: left;
 }
-*:-ms-input-placeholder {
+.contact_form:-ms-input-placeholder {
 	font-size: 12px;
 	font-family: "OpenSansLight";
 	color: rgb(199, 198, 198);
@@ -142,7 +142,8 @@ input[type="captcha"]{
 	text-align: center;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.55);
 	width: 123px;
-	height: 38px;
+	padding-top: 8px;
+	padding-bottom: 8px;
 	-webkit-border-radius: 5px;
 			border-radius: 5px;
 }
