--- a/app/css/portfolio.css
+++ b/app/css/portfolio.css
@@ -103,7 +103,6 @@
 	position: absolute;
 	top: 41%;
 	left: 50%;
-
 	-webkit-transform: translateX(-50%) translateY(-50%);
 	-moz-transform: translateY(-50%) translateY(-50%);
 	-ms-transform: translateX(-50%) translateY(-50%);
@@ -141,4 +140,177 @@
 	position: absolute;
 	top: 67%;
 	left: 24px; 
+}
+
+/*  Popap   */
+
+.b-popup{
+    width:100%;
+    height:100%;
+    background-color: rgba(0,0,0,0.4);
+    overflow:hidden;
+    position:fixed;
+    top:0;
+    z-index: 2;
+}
+
+.b-popup .b-popup-content{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translateX(-50%) translateY(-50%);
+	-moz-transform: translateY(-50%) translateY(-50%);
+	-ms-transform: translateX(-50%) translateY(-50%);
+	-o-transform: translateX(-50%) translateY(-50%);
+	transform: translateX(-50%) translateY(-50%);
+	-webkit-border-radius: 5px;
+			border-radius: 5px;
+    width:320px;
+    height: auto;
+    padding:21px 22px 27px 21px;
+	background-image: -moz-linear-gradient( 90deg, rgb(237,235,234) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
+	background-image: -webkit-linear-gradient( 90deg, rgb(237,235,234) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
+	background-image: -ms-linear-gradient( 90deg, rgb(237,235,234) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#edebea',GradientType=0 )";
+	-webkit-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
+	   -moz-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
+			box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
+}
+.hide_project{
+	position: absolute;
+	top: 7px;
+	right: 7px;
+	display: block;
+	width: 14px;
+    height: 14px;
+    background-position: -5px -5px;
+}
+
+.add_project_form label {
+	display: block;
+	font-size: 14px;
+	color: rgb(114, 112, 112);
+	line-height: 1.2;
+	margin-bottom: 10px;
+	cursor: pointer;
+}
+.add_project_form input{ 
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	font-size: 12px;
+	font-family: "OpenSansLight";
+	color: rgb(114, 112, 112);
+	padding-left: 9px;
+	height: 41px;
+	width: 100%;
+	-webkit-border-radius: 3px;
+			border-radius: 3px;
+	border:1px solid rgb(214, 213, 211);
+	background-image: -moz-linear-gradient( 90deg, rgb(233,231,231) 0%, rgba(251,249,249,0) 100%);
+	background-image: -webkit-linear-gradient( 90deg, rgb(233,231,231) 0%, rgba(251,249,249,0) 100%);
+	background-image: -ms-linear-gradient( 90deg, rgb(233,231,231) 0%, rgba(251,249,249,0) 100%);
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e9e7e7', GradientType=0 )";
+	-webkit-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.35),inset 0 2px 2px 0 rgba(114, 112, 112, 0.1);
+	   -moz-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.35),inset 0 2px 2px 0 rgba(114, 112, 112, 0.1);
+			box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.35),inset 0 2px 2px 0 rgba(114, 112, 112, 0.1);
+		margin-bottom: 8px;
+}
+.img_project{
+	position: relative;
+	background-image: none;
+}
+.img_project:after{
+	content: " ";
+	right: 13px;
+	position: absolute;
+	top: 12px;
+    width: 25px;
+    height: 18px;
+    background-position: -135px -90px;
+}
+.img_project:before{
+	background-image: -moz-linear-gradient( 90deg, rgb(233,230,229) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
+	background-image: -webkit-linear-gradient( 90deg, rgb(233,230,229) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
+	background-image: -ms-linear-gradient( 90deg, rgb(233,230,229) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
+	-webkit-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
+	   -moz-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
+			box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
+	border: 1px solid #c5c5c5;
+	-webkit-border-radius: 0 4px 4px 0;
+	   -moz-border-radius: 0 4px 4px 0;
+	        border-radius: 0 4px 4px 0;
+	position: absolute;
+	right: 0;
+	top: 0;
+	content: " ";
+	height: 39px;
+	width: 50px;
+}
+
+.add_project_form textarea{
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box; 
+	font-size: 12px;
+	font-family: "OpenSansLight";
+	color: rgb(114, 112, 112);
+	padding: 12px 9px 12px 9px;
+	line-height: 1.2;
+	height: 112px;
+	width: 100%;
+	-webkit-border-radius: 3px;
+			border-radius: 3px;
+	margin-bottom: 10px;
+	border: 1px solid rgb(214, 213, 211);
+	background-image: -moz-linear-gradient( 90deg, rgb(233,231,231) 0%, rgba(251,249,249,0) 100%);
+	background-image: -webkit-linear-gradient( 90deg, rgb(233,231,231) 0%, rgba(251,249,249,0) 100%);
+	background-image: -ms-linear-gradient( 90deg, rgb(233,231,231) 0%, rgba(251,249,249,0) 100%);
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e9e7e7', GradientType=0 )";
+	-webkit-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.35),inset 0 2px 2px 0 rgba(114, 112, 112, 0.1);
+	   -moz-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.35),inset 0 2px 2px 0 rgba(114, 112, 112, 0.1);
+			box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.35),inset 0 2px 2px 0 rgba(114, 112, 112, 0.1);
+}
+.add_project_form::-webkit-input-placeholder{
+	font-size: 12px;
+	font-family: "OpenSansLight";
+	color: rgb(199, 198, 198);
+	line-height: 1;
+	text-align: left;
+}
+button[type="submit"]{
+	margin-left: 89px;
+	position: relative;
+	font-size: 14px;
+	font-family: "OpenSansSemiBold";
+	text-align: center;
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.55);
+	width: 124px;
+	padding-top: 9px;
+	padding-bottom: 9px;
+	-webkit-border-radius: 5px;
+			border-radius: 5px;
+	color: rgb(30, 116, 101);
+	border: 1px solid #3fa78a;
+	border-top: 1px solid #6adbbc;
+	background-image: -moz-linear-gradient( 90deg, rgb(67,183,150) 0%, rgb(128,232,203) 100%);
+	background-image: -webkit-linear-gradient( 90deg, rgb(67,183,150) 0%, rgb(128,232,203) 100%);
+	background-image: -ms-linear-gradient( 90deg, rgb(67,183,150) 0%, rgb(128,232,203) 100%);
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#80e8cb', endColorstr='#43b796', GradientType=0 )";		
+	-webkit-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.16);
+	   -moz-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.16);
+			box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.16);	
+}
+button[type="submit"]:hover{
+	background-image: -moz-linear-gradient( 90deg, rgb(58,160,135) 0%, rgb(95,220,189) 100%);
+	background-image: -webkit-linear-gradient( 90deg, rgb(58,160,135) 0%, rgb(95,220,189) 100%);
+	background-image: -ms-linear-gradient( 90deg, rgb(58,160,135) 0%, rgb(95,220,189) 100%);
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#5fdcbd', endColorstr='#3aa087', GradientType=0 )";
+}
+.add_project_form input:focus, .add_project_form textarea:focus {
+	border:1px solid rgb(72, 203, 232); 
+	color: rgb(114, 112, 112);
+}
+textarea{
+	resize:none;
 }
