--- a/app/css/lk.css
+++ b/app/css/lk.css
@@ -35,7 +35,7 @@
 	background-image: -webkit-linear-gradient( 90deg, #f0eeed 0%, #ffffff 100%);
 	background-image: -ms-linear-gradient( 90deg, #f0eeed 0%, #ffffff 100%);
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f0eeed',GradientType=0 )";
-	box-shadow: 0px 11px 27px 0px rgba(159, 159, 159, 0.75),inset 0px 6px 6px 0px rgba(255, 255, 255, 0.004);
+	box-shadow: 0 11px 27px 0 rgba(159, 159, 159, 0.75),inset 0 6px 6px 0 rgba(255, 255, 255, 0.004);
 }
 .form_auth input[type="text"]{ 
 	position: relative;
@@ -165,7 +165,7 @@ input[type="checkbox"] + span {
 	background-image: -moz-linear-gradient( 90deg, rgb(233,231,231) 0%, rgba(251,249,249,0) 100%);
 	background-image: -webkit-linear-gradient( 90deg, rgb(233,231,231) 0%, rgba(251,249,249,0) 100%);
 	background-image: -ms-linear-gradient( 90deg, rgb(233,231,231) 0%, rgba(251,249,249,0) 100%);
-	box-shadow: 0px 1px 0px 0px rgba(167, 166, 166, 0.15),inset 0px 1px 0px 0px rgba(114, 112, 112, 0.33);
+	box-shadow: 0 1px 0 0 rgba(167, 166, 166, 0.15),inset 0 1px 0 0 rgba(114, 112, 112, 0.33);
     cursor: pointer;
 }
 input[type="checkbox"]:checked + span {
