--- a/app/css/feedback.css
+++ b/app/css/feedback.css
@@ -1,7 +1,12 @@
 .contact_form {
-	padding: 33px 122px 34px 122px;
+	position: relative;
+	width: 403px;
+	margin: -6px auto;
 }
-
+.form__block {
+	position: relative;
+  margin-bottom: 100px;
+}
 .inputs{
 	width: 48%;
 	margin-bottom: 15px;
@@ -91,6 +96,7 @@
 			box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.35),inset 0 2px 2px 0 rgba(114, 112, 112, 0.1);
 }
 .antispam{
+	display: block;
 	float: left;
 	width: 190px;
 	height: 77px;
@@ -117,6 +123,7 @@
 	overflow: hidden;
 }
 .captcha{
+	display: block;
 	width: 48%;
 	margin-top: 21px;
 	float: right;
@@ -131,11 +138,11 @@ input[type="captcha"]{
 	padding-top: 9px;
 }
 .buttons{
-	margin-left: 30px;
 	display: inline-block;
-	width: 344px;
+	width: 100%;
 }
 .contact_form button {
+	margin: 0 30px;
 	position: relative;
 	font-size: 14px;
 	font-family: "OpenSansSemiBold";
@@ -158,7 +165,8 @@ button[type="submit"]{
 	-webkit-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.16);
 	   -moz-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.16);
 			box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.16);
-	float: left;		
+	float: left;
+	cursor: pointer;		
 }
 button[type="submit"]:hover{
 	background-image: -moz-linear-gradient( 90deg, rgb(58,160,135) 0%, rgb(95,220,189) 100%);
@@ -178,6 +186,7 @@ button[type="reset"]{
        -moz-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
 	 		box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);			
 	float: right;
+	cursor: pointer;
 }
 button[type="reset"]:hover{
 	background-image: -moz-linear-gradient( 90deg, rgb(194,192,192) 0%, rgb(227,225,225) 87%, rgb(230,228,228) 90%, rgb(232,231,231) 100%);
