--- a/app/css/portfolio.css
+++ b/app/css/portfolio.css
@@ -1,23 +1,30 @@
 .project_list{
 	position: relative;
-	padding: 36px 19px 15px 15px;
+	margin-left: -5.7%;
+	font-size: 0px;
+}
+.project_item{
+	display: inline-block;
+	vertical-align: top;
+	margin-left: 5.6%;
+	margin-bottom: 32px;
 }
 .project{
-	vertical-align: top;
-	display: inline-block;
-	border: 2px solid #c5c5c5;
+	display: block;
+	border: 1px solid #c5c5c5;
     width: 164px;
     overflow: hidden;
 	position: relative;
-	-webkit-border-radius: 5px;
-			border-radius: 5px;
+	-webkit-border-radius: 7px;
+			border-radius: 7px;
 	background-color: #fff;
 	-webkit-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07);
 	   -moz-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07);
 			box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07);
-	margin-left: 27px;
-	margin-bottom: 25px;
+	text-decoration: none;
+	color: rgb(114, 112, 112);
 }
+
 .photo_project{
 	position: relative;
 	border-bottom: 1px solid #bfbfbf;
@@ -45,6 +52,9 @@
 .photo_project:hover:before{
 	opacity: 0;
 }
+.photo_img{
+	max-width: 100%;
+}
 .name_project{
 	background: #f1f1f1;
 	font-family: "OpenSansBold";
@@ -54,10 +64,7 @@
 	text-align: center;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.75);	
 }
-.project a{
-	text-decoration: none;
-	color: rgb(114, 112, 112);
-}
+
 .description_project{
 	padding: 6px;
 	font-size: 12px;
@@ -77,8 +84,10 @@
 	-webkit-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
 	   -moz-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
 			box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
+
 }
 .add_project:before{
+	background-image: none;	
 	content: "";
 	position: absolute;
 	top: 40%;
@@ -95,7 +104,7 @@
 			box-shadow: 1px 1px 1px 0 rgba(255, 255, 255, 0.8),inset 1px 1px 1px 0 rgba(199, 199, 199, 0.85);
 	width: 53px;
 	height: 54px;
-	background-image: none;
+
 }
 
 .add_project:after{
@@ -145,6 +154,7 @@
 /*  Popap   */
 
 .b-popup{
+	display: none;
     width:100%;
     height:100%;
     background-color: rgba(0,0,0,0.4);
@@ -187,6 +197,7 @@
 }
 
 .add_project_form label {
+	position: relative;
 	display: block;
 	font-size: 14px;
 	color: rgb(114, 112, 112);
@@ -215,6 +226,20 @@
 	   -moz-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.35),inset 0 2px 2px 0 rgba(114, 112, 112, 0.1);
 			box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.35),inset 0 2px 2px 0 rgba(114, 112, 112, 0.1);
 		margin-bottom: 8px;
+}
+.no-cssgradients .add_project_form input{
+	padding: 12px 8px 5px 8px;
+}
+.add_project_form:-ms-input-placeholder {
+	font-size: 12px;
+	font-family: "OpenSansLight";
+	color: rgb(199, 198, 198);
+	line-height: 1.2;
+	text-align: left;
+	padding-top: 2px;
+}
+/*.add_project_form input[type="file"]{ 
+
 }
 .img_project{
 	position: relative;
@@ -247,6 +272,67 @@
 	height: 39px;
 	width: 50px;
 }
+*/
+.label_img {
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+    padding: 10px 10px 8px 10px; 
+	height: 41px;
+	width: 100%;
+	-webkit-border-radius: 3px;
+			border-radius: 3px;
+	border:1px solid rgb(214, 213, 211);
+	background-image: -moz-linear-gradient( 90deg, rgb(243,241,241) 0%, rgba(251,249,249,0) 100%);
+	background-image: -webkit-linear-gradient( 90deg, rgb(243,241,241) 0%, rgba(251,249,249,0) 100%);
+	background-image: -ms-linear-gradient( 90deg, rgb(243,241,241) 0%, rgba(251,249,249,0) 100%);
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e9e7e7', GradientType=0 )";
+	-webkit-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.35),inset 0 2px 2px 0 rgba(114, 112, 112, 0.1);
+	   -moz-box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.35),inset 0 2px 2px 0 rgba(114, 112, 112, 0.1);
+			box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.35),inset 0 2px 2px 0 rgba(114, 112, 112, 0.1);
+		margin-bottom: 8px;
+}
+.upload_text_img{
+	font-size: 12px;
+	font-family: "OpenSansLight";
+	color: rgb(154, 152, 152);
+	line-height: 1;
+	text-align: left;
+}
+.upload_icon_img {
+	right: 13px;
+	position: absolute;
+	top: 11px;
+    width: 25px;
+    height: 18px;
+    background-position: -135px -90px;
+   	cursor: pointer;
+   	overflow: hidden;
+}
+.label_img:before{
+	background-image: -moz-linear-gradient( 90deg, rgb(233,230,229) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
+	background-image: -webkit-linear-gradient( 90deg, rgb(233,230,229) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
+	background-image: -ms-linear-gradient( 90deg, rgb(233,230,229) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
+	-webkit-box-shadow: 0 1px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
+	   -moz-box-shadow: 0 1px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
+			box-shadow: 0 1px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
+	border: 1px solid #c5c5c5;
+	-webkit-border-radius: 0 4px 4px 0;
+	   -moz-border-radius: 0 4px 4px 0;
+	        border-radius: 0 4px 4px 0;
+	position: absolute;
+	right: 0;
+	top: -1px;
+	content: " ";
+	height: 39px;
+	width: 50px;
+	z-index: -2;
+}
+.add_project_form input[type="file"]{
+	opacity: 0;
+	font-size: 0;
+	height: 0;
+}
 
 .add_project_form textarea{
 	box-sizing: border-box;
@@ -278,6 +364,7 @@
 	line-height: 1;
 	text-align: left;
 }
+
 button[type="submit"]{
 	margin-left: 89px;
 	position: relative;
@@ -299,7 +386,8 @@ button[type="submit"]{
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#80e8cb', endColorstr='#43b796', GradientType=0 )";		
 	-webkit-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.16);
 	   -moz-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.16);
-			box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.16);	
+			box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.16);
+	cursor: pointer;	
 }
 button[type="submit"]:hover{
 	background-image: -moz-linear-gradient( 90deg, rgb(58,160,135) 0%, rgb(95,220,189) 100%);
@@ -313,4 +401,78 @@ button[type="submit"]:hover{
 }
 textarea{
 	resize:none;
+}
+@media (min-width: 768px) and (max-width: 966px){
+.project_list{
+	margin-left: -8.7%;
+}
+.project_item{
+	margin-left: 14.6%;
+}
+}
+/* Large Devices, Wide Screens */
+@media only screen and (max-width : 1200px) {
+
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (max-width : 992px) {
+
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width: 768px){
+.project_list{
+	margin-left: -5%;
+	margin-top: -1.5%;
+}
+.project_item{
+	margin-left: 13%;
+}
+.project {
+	width: 191px;
+}    
+.photo_project {
+    height: 139px;
+}
+.photo_project:before {
+	height: 153px;
+	width: 191px;
+}
+
+.add_project{
+	height: 153px;
+	width: 191px;
+}
+.add_project_text{
+	font-size: 16px;
+}
+
+.add_project:before{
+	width: 63px;
+	height: 64px;
+}
+.name_project{
+	font-size: 16px;
+	margin-top: 0;
+}
+
+.description_project{
+	padding: 10px;
+	font-size: 12px;
+	line-height: 18px;
+}
+
+}
+
+/*     Adaptiv    */
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 480px) {
+	
+}
+
+/* Custom, iPhone Retina */
+@media only screen and (max-width : 320px) {
+
+
 }
