--- a/app/css/style.css
+++ b/app/css/style.css
@@ -189,6 +189,9 @@ header{
 	width: 250px;
 	max-width: 27%;
 }
+.soc2{
+	display: none;
+}
 .nav{
 	margin-bottom: 35px;
 }
@@ -640,10 +643,15 @@ header{
 	text-decoration: none;		
 }
 .footer_text{
-	display: inline-block;
 	margin-left: 98px;
 	font-family: "OpenSansLight";
 	color: rgb(114, 112, 112);
+	display: block;
+	float: right;
+	width: 70%;
+	margin-top: -17px;
+	line-height: 1.4;
+	text-align: left;
 }
 
 .enter {
@@ -815,7 +823,7 @@ header{
 	display: block;
 	float: right;
 	cursor: pointer;
-	z-index: 2;	
+	z-index: 3;	
 }
 .content_area{
 	float: none;
@@ -836,10 +844,6 @@ header{
 
 .enter {
     margin-left: 2%;
-}
-
-.contact_form {
-	padding: 2.5% 2% 0 0;
 }
 .footer_container{
 	max-width: 95%;	
@@ -888,6 +892,7 @@ header{
     top: -29px; 
     border: 12px solid transparent; 
     border-bottom: 20px solid #e3e3e4; 
+    z-index: -2;
 }
 
 .contacts{
@@ -930,20 +935,644 @@ header{
 	border-right: 1px solid #d7d6d5;
 	margin-left: -5px;
 }
-.captcha{
-	width: 191px;
-	max-width: 52%;
+.footer_text{
+	margin-left: 98px;
+	margin-top: 3px;
 }
-
 }
 /*     Adaptiv    */
-/* Extra Small Devices, Phones */
-@media only screen and (max-width : 480px) {
-	
+/* Small Devices, Tablets */
+@media only screen and (max-width: 600px){
+
+.skills{
+	max-width: 60%;
+	margin-right: -10%;
+	margin-bottom: -4px;
+}
+.information{
+	margin-bottom: 3.6%;
+}
+.main_information{
+	padding-bottom: 4%;
+}
+.photo{
+	margin-top: -6px;
+}
+.info{
+	margin-left: 15px;
+	max-width: 60%;
+	margin-top: -15px;
+	font-size: 13px;
+}
+.info_more{
+	max-width: 60%;
+}
+.header{
+	margin-bottom: 4%;
 }
 
-/* Custom, iPhone Retina */
+.last{
+	margin-bottom: 119px;
+}
+
+.contacts a{
+	position: relative;
+	padding: 6px 5px 8px 45px;	
+}
+.gmail_cont:before{
+	left: 7px;
+}
+.tel_cont:before{
+	top: 9px;
+	left: 7px;		
+}
+.skype_cont:before{
+	left: 7px;
+}
+.contacts a:after{
+	left: 16%;
+}
+}
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 480px) {
+header{
+	height: 65px;
+	border-bottom: 4px solid #fff;
+}
+.header_container{
+	width: 95%;	
+}
+.header{
+	margin-bottom: 4.5%;
+}
+.socials{
+	display: none;
+}
+.logo_img img{
+	margin-top: -4px;
+	max-width: 80px;
+	max-height: auto;
+	margin-left: 10px;
+}
+.skills{
+	max-width: 60%;
+	margin-right: -10%;
+	margin-bottom: -4px;
+}
+.information{
+	width: 398px;
+	max-width: 103%;
+	margin-left:1.5%;
+	margin-bottom: 5.6%;
+}
+.main_information{
+	padding: 4% 3% 4% 4.5%;
+}
+.main_line{
+	padding: 6px 10% 10px 10%;
+	text-align: center;
+}
+.content_area{
+	float: none;
+	margin: 0 auto;
+	width: 400px;
+	max-width: 90%;
+}
+.photo{
+	margin-left: 29%;
+	margin-top: 4px;
+}
+
+.info{
+	max-width: 100%;
+	font-size: 16px;
+	margin-top: 7px;
+	margin-left: 0;
+	line-height: 1.6;
+}
+.info_more{
+	max-width: 53%;
+	margin-right: -20px;
+}
+.education {
+	margin-right: 5px;
+	margin-top: -15px;
+	margin-bottom: -14px;
+}
+.org:last-child {
+	-webkit-box-shadow:none;
+	   -moz-box-shadow:none;
+			box-shadow:none;
+	border-bottom: none;
+}
+.org{
+	margin: 0 auto;
+	position: relative;
+	color: rgb(114, 112, 112);
+	padding: 39px 0 15px 0;
+	line-height: 1.3;
+	text-align: center;
+	border-bottom: 1px solid #dbdbda;
+	background-image: none;	
+	-webkit-box-shadow: 0 1px 0 0 rgba(209, 209, 209, 0.95), 0 1px 0 0 rgba(0, 0, 0, 0.35);
+	   -moz-box-shadow: 0 1px 0 0 rgba(209, 209, 209, 0.95), 0 1px 0 0 rgba(0, 0, 0, 0.35);
+			box-shadow: 0 1px 0 0 rgba(209, 209, 209, 0.95), 0 1px 0 0 rgba(0, 0, 0, 0.35);
+}
+.org:before{
+	content: "";
+	position: absolute;
+	top: 18px;
+	left: 50%;
+	background-image: none;	
+	-webkit-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-o-transform: translateX(-50%);
+	transform: translateX(-50%);
+	-webkit-border-radius: 50%;
+	   -moz-border-radius: 50%;
+			border-radius: 50%;
+	-webkit-box-shadow: 1px 1px 1px 0 rgba(255, 255, 255, 0.8),inset 1px 1px 1px 0 rgba(199, 199, 199, 0.85);
+	   -moz-box-shadow: 1px 1px 1px 0 rgba(255, 255, 255, 0.8),inset 1px 1px 1px 0 rgba(199, 199, 199, 0.85);
+			box-shadow: 1px 1px 1px 0 rgba(255, 255, 255, 0.8),inset 1px 1px 1px 0 rgba(199, 199, 199, 0.85);
+	width: 78px;
+	height: 78px;
+}
+.work{
+	width: 100%;
+	margin: 0 auto;
+	margin-top: 69px;
+}
+.bold{
+	font-size: 114%;
+	font-family: "OpenSansSemiBold";
+}
+.data{
+	line-height: 1.4;
+}
+.icon_work{
+	background-image: url(../images/spritesheet_mob.png);
+	background-repeat: no-repeat;
+    display: block;
+    width: 31px;
+    height: 29px;
+    background-position: -5px -55px;
+	position: absolute;
+	top: 44px;
+	left: 50.5%;
+	-webkit-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-o-transform: translateX(-50%);
+	transform: translateX(-50%);   
+}
+.icon_school{
+	background-image: url(../images/spritesheet_mob.png);
+	background-repeat: no-repeat;
+    display: block;
+    width: 27px;
+    height: 27px;
+    background-position: -5px -102px;
+	position: absolute;
+	top: 44px;
+	left: 50.5%;
+	-webkit-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-o-transform: translateX(-50%);
+	transform: translateX(-50%);  
+}
+.icon_vus{
+	background-image: url(../images/spritesheet_mob.png);
+	background-repeat: no-repeat;
+    display: block;
+    width: 39px;
+    height: 26px;
+    background-position: -77px -89px;
+	position: absolute;
+	top: 46px;
+	left: 50.5%;
+	-webkit-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-o-transform: translateX(-50%);
+	transform: translateX(-50%);  
+}
+.icon_course{
+	background-image: url(../images/spritesheet_mob.png);
+	background-repeat: no-repeat;
+    display: block;
+    width: 21px;
+    height: 28px;
+    background-position: -46px -89px;
+	position: absolute;
+	top: 45px;
+	left: 50.5%;
+	-webkit-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-o-transform: translateX(-50%);
+	transform: translateX(-50%);  
+}
+.footer_text{
+	margin-left: 28%;
+	font-size: 8px;
+}
+.enter {
+    margin-left: 6.4%;
+}
+.enter_text{
+	margin-left: 27px;
+}
+
+.nav_list{
+	display: none;
+}
+.nav{
+	top: 71px;
+	right: 0;
+}
+.navigation{
+	width: 250px;
+	padding: 18px 15px 22px 24px;
+	font-size: 24px;
+}
+.tr3:after {
+	right: 18px;
+    top: -40px; 
+    border: 18px solid transparent; 
+    border-bottom: 25px solid #e3e3e4; 
+}
+.last{
+	margin-bottom: 177px;
+}
+.contacts{
+	position: relative;
+	width: 398px;
+	max-width: 90%;
+	position: absolute;
+	bottom: 138px;
+	margin-left: 1.3%;
+}
+
+.contacts li{
+	display: block;
+	height: 47px;
+	width: 100%;
+	max-width: 400px;
+	margin: 0;
+	border-right: 1px solid #d7d6d5;	
+}
+.contacts a:after{
+	left: 23%;
+	top: 0;
+    width: 14px;
+    height: 48px;
+	background-image: url(../images/str_mob.png);
+	background-position: 0 0;
+	z-index: 2;
+}
+.gmail_cont:before{
+	background-image: url(../images/spritesheet_mob.png);
+	background-repeat: no-repeat;
+    display: block;
+	content: '';
+	position: absolute;
+	top: 30%;
+	left: 9%;
+    width: 32px;
+    height: 24px;
+    background-position: -125px -55px;
+}
+.tel_cont:before{
+	background-image: url(../images/spritesheet_mob.png);
+	background-repeat: no-repeat;
+    display: block;
+	content: '';
+	position: absolute;
+	top: 20%;
+	left: 10%;	
+    width: 24px;
+    height: 32px;
+    background-position: -170px -102px;
+}
+.skype_cont:before{
+	background-image: url(../images/spritesheet_mob.png);
+	background-repeat: no-repeat;
+    display: block;
+	content: '';
+	position: absolute;
+	top: 29%;
+	left: 9%;
+    width: 28px;
+    height: 28px;
+    background-position: -132px -102px;
+}
+
+.contacts a{
+	padding: 0 14px 0 133px;	
+	font-size: 24px;
+}
+.contacts li:first-child{
+	margin: 0;
+
+}
+.contacts li:last-child{
+	margin: 0;
+}
+
+.socials2{
+	position: relative;
+	padding: 0 9% 0 9%;	
+}
+.soc2{
+	display: block;
+	height: 82px;
+
+}
+.socials_item2{
+	cursor: pointer;
+	position: relative;
+	display: inline-block;
+	margin-left: 23px;
+	white-space: nowrap;
+	text-indent: -9999px;
+	border-radius: 50%;
+	width: 67px;
+	height: 67px;
+	background-image: -moz-linear-gradient( 90deg, rgb(233,230,228) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
+	background-image: -webkit-linear-gradient( 90deg, rgb(233,230,228) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
+	background-image: -ms-linear-gradient( 90deg, rgb(233,230,228) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
+	box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.31),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
+}
+
+.icon_mob, 
+.icon_mob:before, 
+.icon_mob:after {
+	background-image: url(../images/spritesheet_mob.png);
+	background-repeat: no-repeat;
+    display: block;
+}
+
+.icon_mob_fb {
+	position: absolute;
+	top: 23%;
+	left: 36%;
+	cursor: pointer;
+    width: 19px;
+    height: 40px;
+    background-position: -125px -5px;
+}
+.icon_mob_fb:hover {
+    background-position: -206px -57px;
+}
+.icon_mob_git {
+	position: absolute;
+	top: 23%;
+	left: 13%;
+    cursor: pointer;
+    width: 55px;
+    height: 42px;
+    background-position: -60px -5px;
+}
+
+.icon_mob_git:hover {
+    background-position: -167px -5px;
+}
+.icon_mob_tw {
+	position: absolute;
+	top: 23%;
+	left: 18%;
+    cursor: pointer;    
+    width: 45px;
+    height: 33px;
+    background-position: -5px -5px;
+}
+.icon_mob_tw:hover {
+    background-position: -77px -125px;
+}
+.icon_mob_vk {
+	position: absolute;
+	top: 26%;
+	left: 31%;
+    cursor: pointer;
+    width: 29px;
+    height: 35px;
+    background-image:url(../images/vk_mob.png);
+}
+
+.icon_mob_vk:hover {
+	background-image: url(../images/spritesheet_mob.png);
+    width: 29px;
+    height: 35px;	
+    background-position: -167px -57px;
+}
+}
+
+/* Custom, Retina */
+@media only screen and (max-width : 380px) {
+.information{
+	max-width: 100%;
+	margin-left: 0;
+}
+.photo{
+	margin-left: 25%;
+}
+.info{
+	font-size: 14px;
+}
+.footer_container {
+    max-width: 100%;
+}
+.footer_text{
+	display: block;
+	float: right;
+	width: 70%;
+	font-size: 8px;
+}
+.enter {
+    margin-left: 2%;
+}
+.enter_text{
+	margin-left: 23px;
+}
+
+.last{
+	margin-bottom: 177px;
+}
+.contacts{
+	max-width: 84%;
+}
+
+.contacts li{
+	height: 44px;
+}
+.contacts a:after{
+	left: 18%;
+    height: 44px;
+	background-position: 0 -2px;
+}
+.gmail_cont:before{
+	top: 25%;
+	left: 5%;
+}
+.tel_cont:before{
+	top: 21%;
+	left: 7%;	
+}
+.skype_cont:before{
+	top: 25%;
+	left: 6%;
+}
+.contacts a{
+	padding: 0 14px 0 88px;	
+	font-size: 22px;
+}
+
+
+.socials2{
+	position: relative;
+	padding: 0 3% 0 3%;	
+}
+
+.socials_item2{
+	width: 57px;
+	height: 57px;
+	margin-left: 22px;
+}
+.icon_mob_fb {
+	top: 20%;
+	left: 36%;
+}
+.icon_mob_git {
+	top: 20%;
+	left: 4%;
+}
+.icon_mob_tw {
+	top: 20%;
+	left: 16%;
+}
+.icon_mob_vk {
+	top: 23%;
+	left: 28%;
+}
+
+
+}
+
 @media only screen and (max-width : 320px) {
+.photo{
+	margin-left: 17%;
+}
+.info{
+	font-size: 12px;
+}
+.main_line{
+	font-size: 22px;
+	padding: 4% 1% 4% 1%;
+}
+.navigation{
+	width: 180px;
+	padding: 12px 18px 12px 15px;
+	font-size: 20px;
+}
+.bold{
+	font-size: 100%;
+}
+.data{
+	font-size: 12px;
+	line-height: 2;
+}
+.org:before{
+	width: 68px;
+	height: 68px;
+}
+.work{
+	margin-top: 55px;
+}
+
+.icon_work{
+	top: 38px;
+}
+.icon_school{
+	top: 38px;
+}
+.icon_vus{
+	top: 40px;
+}
+.icon_course{
+	top: 39px;
+}
+
+.footer_text{
+	display: block;
+	float: right;
+	width: 70%;
+	font-size: 8px;
+	margin-top: -17px;
+	line-height: 1.4;
+	text-align: center;
+}
+.enter {
+	display: inline-block;
+    margin-left: 2%;
+}
+.enter_text{
+	margin-left: 23px;
+}
+
+.last{
+	margin-bottom: 177px;
+}
+
+
+.contacts li{
+	height: 42px;
+
+}
+.contacts a:after{
+	left: 18%;
+    height: 42px;
+	background-position: 0 -3px;
+}
+.gmail_cont:before{
+	top: 25%;
+	left: 5%;
+}
+.tel_cont:before{
+	top: 21%;
+	left: 7%;	
+}
+.skype_cont:before{
+	top: 25%;
+	left: 6%;
+}
+.contacts a{
+	padding: 3px 14px 3px 75px;	
+	font-size: 18px;
+}
+
+.socials_item2{
+	width: 53px;
+	height: 53px;
+	margin-left: 14px;
+}
+.icon_mob_fb {
+	top: 15%;
+	left: 32%;
+}
+.icon_mob_git {
+	top: 13%;
+	left: 0;
+}
+.icon_mob_tw {
+	top: 20%;
+	left: 11%;
+}
+.icon_mob_vk {
+	top: 17%;
+	left: 25%;
+}
 
 
 }
